// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`01 - Node.js CI with Matrix 1`] = `
{
  "cdkactions_node-ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'ci' stack.
name: Node.js CI
on:
  pull_request:
    branches:
      - main
  push:
    branches:
      - main
    paths:
      - .github/workflows/cdkactions_node-ci.yaml
      - src/**
      - package.json
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - id: setup-node
        uses: actions/setup-node@v6
        with:
          node-version: \${{ matrix.nodeVersion }}
      - name: Install
        run: npm ci
      - name: Lint
        run: npm run lint
      - name: Test
        run: npm test
    strategy:
      fail-fast: false
      matrix:
        nodeVersion:
          - "18"
          - "20"
          - "22"
"
,
}
`;

exports[`02 - Docker Build and Push 1`] = `
{
  "cdkactions_docker.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'docker' stack.
concurrency:
  cancel-in-progress: true
  group: docker-\${{ github.ref }}
name: Docker Publish
on:
  push:
    branches:
      - main
    tags:
      - v*
permissions:
  contents: read
  packages: write
jobs:
  push:
    environment:
      name: production
      url: https://ghcr.io
    permissions:
      attestations: write
      contents: read
      id-token: write
      packages: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Login to GHCR
        uses: docker/login-action@v3
        with:
          password: \${{ secrets.GITHUB_TOKEN }}
          registry: ghcr.io
          username: \${{ github.actor }}
      - name: Build and push
        uses: docker/build-push-action@v5
        with:
          push: true
          tags: ghcr.io/\${{ github.repository }}:latest
"
,
}
`;

exports[`03 - Multi-Job Pipeline with Dependencies 1`] = `
{
  "cdkactions_pipeline.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'pipeline' stack.
name: Build → Test → Deploy
on:
  push:
    branches:
      - main
jobs:
  build:
    outputs:
      artifact_id: \${{ steps.upload.outputs.artifactId }}
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
      - id: upload
        uses: actions/upload-artifact@v4
        with:
          name: dist
          path: dist/
  deploy:
    environment: production
    if: github.ref == 'refs/heads/main'
    needs:
      - test
    runs-on: ubuntu-latest
    steps:
      - name: Download artifact
        uses: actions/download-artifact@v4
        with:
          name: dist
      - name: Deploy
        run: ./deploy.sh
  notify:
    if: always()
    needs:
      - deploy
    runs-on: ubuntu-latest
    steps:
      - name: Notify
        run: echo "Pipeline finished"
  test:
    needs:
      - build
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Test
        run: npm test
"
,
}
`;

exports[`04 - Scheduled Workflow with Cron 1`] = `
{
  "cdkactions_stale.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'stale' stack.
name: Close Stale Issues
on:
  schedule:
    - cron: 0 0 * * *
      timezone: America/New_York
    - cron: 0 12 * * *
      timezone: America/New_York
jobs:
  stale:
    permissions:
      issues: write
      pull-requests: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/stale@v9
        with:
          days-before-close: 7
          days-before-stale: 60
          stale-issue-message: This issue is stale.
"
,
}
`;

exports[`05 - Manual Dispatch with Typed Inputs 1`] = `
{
  "cdkactions_deploy-manual.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'deploy' stack.
name: Manual Deploy
on:
  workflow_dispatch:
    inputs:
      concurrency:
        default: "1"
        description: Parallel deploy count
        required: false
        type: number
      dryRun:
        default: false
        description: Dry run only
        required: false
        type: boolean
      environment:
        description: Target environment
        required: true
        type: environment
      logLevel:
        description: Log verbosity
        options:
          - debug
          - info
          - warn
          - error
        required: true
        type: choice
run-name: Deploy by \${{ github.actor }}
jobs:
  deploy:
    if: inputs.logLevel == 'debug'
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo "Deploying to \${{ inputs.environment }}"
"
,
}
`;

exports[`06 - Reusable Workflow (workflow_call) 1`] = `
{
  "cdkactions_build-reusable.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'reusable' stack.
name: Reusable Build
on:
  workflow_call:
    inputs:
      nodeVersion:
        description: Node.js version
        required: true
        type: string
      uploadArtifact:
        default: true
        description: Upload build artifact
        required: false
        type: boolean
    outputs:
      buildHash:
        description: SHA of the build output
        value: \${{ jobs.build.outputs.hash }}
    secrets:
      npmToken:
        required: true
      sentryDsn:
        required: false
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
"
,
  "cdkactions_release.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'reusable' stack.
name: Release
on:
  push:
    tags:
      - v*
jobs:
  call-build:
    secrets: inherit
    uses: ./.github/workflows/cdkactions_build-reusable.yaml
    with:
      nodeVersion: "20"
      uploadArtifact: true
"
,
}
`;

exports[`07 - Container Job with Services 1`] = `
{
  "cdkactions_integration.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'integration' stack.
name: Integration Tests
on:
  push:
    branches:
      - main
jobs:
  integration:
    container:
      env:
        NODE_ENV: test
      image: node:20-bookworm
      options: "--cpus 2"
      volumes:
        - /tmp/cache:/cache
    runs-on: ubuntu-latest
    services:
      postgres:
        env:
          POSTGRES_DB: testdb
          POSTGRES_PASSWORD: test
          POSTGRES_USER: test
        image: postgres:16
        options: "--health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5"
        ports:
          - 5432:5432
      redis:
        command: redis-server --requirepass testpass
        entrypoint: ""
        image: redis:7
        ports:
          - 6379:6379
    steps:
      - uses: actions/checkout@v4
      - name: Run integration tests
        run: npm run test:integration
"
,
}
`;

exports[`08 - Composite Action with Typed I/O 1`] = `
{
  "cdkactions_ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'composite' stack.
name: CI
on:
  push:
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    steps: []
"
,
}
`;

exports[`09 - Typed Expressions and Conditions 1`] = `
{
  "cdkactions_expressions.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'expressions' stack.
name: Expressions Demo
on:
  push:
    branches:
      - main
jobs:
  deploy:
    if: (github.ref == 'refs/heads/main' && github.actor != 'dependabot[bot]')
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo deploying
"
,
}
`;

exports[`10 - Cross-Workflow Dependencies 1`] = `
{
  "cdkactions_ci.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'cross-wf' stack.
name: CI
on:
  push:
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - name: Build
        run: npm run build
"
,
  "cdkactions_deploy.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'cross-wf' stack.
name: Deploy
on:
  workflow_run:
    types:
      - completed
    workflows:
      - CI
jobs:
  deploy:
    if: github.event.workflow_run.conclusion == 'success'
    runs-on: ubuntu-latest
    steps:
      - name: Deploy
        run: echo deploying
"
,
}
`;

exports[`11 - Full Permissions and Concurrency 1`] = `
{
  "cdkactions_secure.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'secure' stack.
concurrency:
  cancel-in-progress: false
  group: security-\${{ github.ref }}
name: Security Scan
on:
  push:
    branches:
      - main
permissions:
  actions: read
  contents: read
  id-token: write
  models: read
  security-events: write
jobs:
  scan:
    concurrency: scan-serial
    permissions:
      contents: read
      security-events: write
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - uses: github/codeql-action/init@v3
      - uses: github/codeql-action/analyze@v3
"
,
}
`;

exports[`12 - Multi-Platform Build with Runner Groups 1`] = `
{
  "cdkactions_build.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'multi-platform' stack.
name: Multi-Platform Build
on:
  push:
    branches:
      - main
jobs:
  build:
    continue-on-error: true
    runs-on:
      group: large-runners
      labels:
        - linux-x64-8core
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: make build ARCH=\${{ matrix.arch }}
    strategy:
      fail-fast: false
      matrix:
        arch:
          - x64
          - arm64
        os:
          - ubuntu-latest
          - macos-latest
          - windows-latest
      max-parallel: 4
    timeout-minutes: 60
"
,
}
`;

exports[`13 - GitHub Pages Deployment 1`] = `
{
  "cdkactions_pages.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'pages' stack.
concurrency:
  cancel-in-progress: false
  group: pages
name: Deploy to Pages
on:
  push:
    branches:
      - main
permissions:
  contents: read
  id-token: write
  pages: write
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4
      - name: Build
        run: npm run build
      - uses: actions/upload-pages-artifact@v3
        with:
          path: ./dist
  deploy:
    environment:
      name: github-pages
      url: \${{ steps.deployment.outputs.page_url }}
    needs:
      - build
    runs-on: ubuntu-latest
    steps:
      - id: deployment
        uses: actions/deploy-pages@v4
"
,
}
`;

exports[`14 - Event Coverage: Discussions, Branch Protection, Merge Group 1`] = `
{
  "cdkactions_branch-rules.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
name: Branch Protection Audit
on:
  branch_protection_rule:
    types:
      - created
      - edited
      - deleted
jobs:
  audit:
    runs-on: ubuntu-latest
    steps:
      - name: Audit
        run: echo "Branch rule changed"
"
,
  "cdkactions_discussion-bot.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
name: Discussion Bot
on:
  discussion:
    types:
      - created
      - answered
      - unanswered
      - category_changed
  discussion_comment:
    types:
      - created
jobs:
  handle:
    runs-on: ubuntu-latest
    steps:
      - name: Handle
        run: echo "Discussion event"
"
,
  "cdkactions_merge-queue.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'events' stack.
name: Merge Queue CI
on:
  merge_group:
    types:
      - checks_requested
jobs:
  ci:
    runs-on: ubuntu-latest
    steps:
      - name: CI
        run: echo "Merge queue check"
"
,
}
`;

exports[`15 - Central Runner Registry 1`] = `
{
  "cdkactions_custom-runners.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'runners' stack.
name: Custom Runners
on:
  push:
    branches:
      - main
jobs:
  build-arm:
    runs-on: ci-arm64
    steps:
      - name: Build
        run: make build ARCH=arm64
  build-x64:
    runs-on: ci-linux-x64
    steps:
      - name: Build
        run: make build
  train:
    runs-on: gpu-a100-80gb
    steps:
      - name: Train model
        run: python train.py
    timeout-minutes: 360
"
,
}
`;

exports[`16 - Typed Action References 1`] = `
{
  "cdkactions_build.yaml": 
"# Generated by cdkactions. Do not modify
# Generated as part of the 'action-refs' stack.
name: Build with Action
on:
  push:
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
      - id: co
        uses: actions/checkout@v4
        with:
          fetch-depth: 0
          lfs: true
      - id: node
        uses: actions/setup-node@v4
        with:
          cache: npm
          node-version: "20"
      - name: Build
        run: npm run build
      - id: upload
        uses: actions/upload-artifact@v4
        with:
          name: dist
          path: dist/
"
,
}
`;
